feat(server): add stackParentId to asset entity
