# server/src/domain/asset/response-dto/asset-response.dto.ts
@@ -37,6 +37,8 @@ export class AssetResponseDto {
   people?: PersonResponseDto[];
   /**base64 encoded sha1 hash */
   checksum!: string;
+  stackParentId?: string | null;
+  stack?: AssetResponseDto[];
 }
 
 function _map(entity: AssetEntity, withExif: boolean): AssetResponseDto {
@@ -64,6 +66,8 @@ function _map(entity: AssetEntity, withExif: boolean): AssetResponseDto {
     tags: entity.tags?.map(mapTag),
     people: entity.faces?.map(mapFace).filter((person) => !person.isHidden),
     checksum: entity.checksum.toString('base64'),
+    stackParentId: entity.stackParentId,
+    stack: entity.stack?.map(mapAsset),
     isExternal: entity.isExternal,
     isOffline: entity.isOffline,
     isReadOnly: entity.isReadOnly,
