# server/src/immich/api-v1/asset/asset.core.ts
@@ -46,6 +46,7 @@ export class AssetCore {
       faces: [],
       sidecarPath: sidecarPath || null,
       isReadOnly: dto.isReadOnly ?? false,
+      stackParentId: null,
       isExternal: dto.isExternal ?? false,
       isOffline: dto.isOffline ?? false,
     });
